# CMake

./: .gitignore  CMakeLists.txt  README.md
Scripts/: comment.cmake  test.cmake  test2.cmake
Source/: CMakeLists.txt
Source/foo/: foo.h  main.cpp
Tools/Linux/: build.sh
Tools/Windows/: GenerateProjectFiles.bat
cmake/: BuildInfo.cmake  Coverage.cmake  CppCheck.cmake  Doxygen.cmake  GetFTXUI.cmake  Install.cmake  Memcheck.cmake  NoInSourceBuilds.cmake  Testing.cmake  buildinfo.h.in
src/: CMakeLists.txt
src/calc/: CMakeLists.txt  calc.cpp
src/calc/include/calc/: calc.h
src/calc_console/: CMakeLists.txt  bootstrap.cpp  tui.cpp
test/: CMakeLists.txt
test/calc/: CMakeLists.txt  calc_test.cpp
test/calc_console/: CMakeLists.txt  tui_test.cpp
